test/log/conversion/vclip_wv_u32.txt
vclip_wv_u32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vclip_wv_u32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vclip_wv_u32.c:30:6: warning: no previous prototype for 'vclip_wv_u32_golden' [-Wmissing-prototypes]
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vclip_wv_u32.c: In function 'vclip_wv_u32_golden':
vclip_wv_u32.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vclip_wv_u32.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vclip_wv_u32.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vclip_wv_u32.c: In function 'main':
vclip_wv_u32.c:37:18: warning: declaration of 'a' shadows a parameter [-Wshadow]
   37 |     uint64x8x2_t a;
      |                  ^
vclip_wv_u32.c:30:35: note: shadowed declaration is here
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                          ~~~~~~~~~^~~~~~~
vclip_wv_u32.c:38:17: warning: declaration of 'b' shadows a parameter [-Wshadow]
   38 |     uint32x16_t b;
      |                 ^
vclip_wv_u32.c:30:53: note: shadowed declaration is here
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                                           ~~~~~~~~~~^
vclip_wv_u32.c:43:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   43 |     uint32_t exp_result[16] = {0};
      |              ^~~~~~~~~~
vclip_wv_u32.c:30:65: note: shadowed declaration is here
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                                                       ~~~~~~~~~~^~~~~~~~~~
vclip_wv_u32.c:57:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   57 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
vclip_wv_u32.c: In function 'vclip_wv_u32_golden':
vclip_wv_u32.c:72:1: error: expected declaration or statement at end of input
   72 | }
      | ^
vclip_wv_u32.c:30:35: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                          ~~~~~~~~~^~~~~~~
vclip_wv_u32.c:30:53: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                                           ~~~~~~~~~~^
vclip_wv_u32.c:30:65: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vclip_wv_u32_golden(uint64_t a[2][8],uint32_t *b,uint32_t *exp_result) {
      |                                                       ~~~~~~~~~~^~~~~~~~~~
At top level:
vclip_wv_u32.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vclip_wv_u32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vclip_wv_u32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vclip_wv_u32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vclip_wv_u32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed